[package]
name = "ght"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
directories = "5.0.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tui = "0.19.0"
